# context-compiler-example-integrations

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
python/: README.md
python/examples/checkpoint_continuation/: README.md  example.py
python/examples/checkpoint_continuation/fastapi/: README.md  app.py
python/examples/execution_authorization/: README.md
python/examples/execution_authorization/expense_approval/: README.md  __init__.py  example.py
python/examples/gateway_middleware/: README.md
python/examples/gateway_middleware/customer_support_routing/: __init__.py  example.py
python/examples/prompt_construction/: README.md
python/examples/prompt_construction/litellm/: README.md  basic.py  confirmation_helper.py  with_directive_drafter.py
python/examples/prompt_construction/writing_assistant/: README.md  __init__.py  example.py
python/examples/retrieval_filtering/: README.md
python/examples/retrieval_filtering/chromadb_hr_policy_lookup/: README.md  __init__.py  example.py
python/examples/retrieval_filtering/hr_policy_lookup/: README.md  __init__.py  example.py
python/examples/schema_selection/: README.md
python/examples/schema_selection/litellm_response_format/: response_format.py
python/examples/schema_selection/ollama_structured_output/: README.md  example.py
python/examples/tool_gating/: README.md
python/reference_integrations/litellm_proxy/: README.md  config.example.yaml  context_compiler_precall_hook.py  context_compiler_precall_hook_with_directive_drafter.py
python/reference_integrations/openwebui_pipe/: README.md  open_webui_pipe.py  open_webui_pipe_with_directive_drafter.py
python/tests/: test_calendar_admin_tool_gating_example.py  test_checkpoint_continuation_example.py  test_chromadb_retrieval_filtering_example.py  test_expense_approval_example.py  test_fastapi_checkpoint_continuation_example.py  test_gateway_middleware_example.py  test_litellm_basic.py  test_litellm_confirmation_helper.py  test_litellm_proxy_hooks.py  test_litellm_proxy_runtime.py  test_litellm_proxy_with_directive_drafter.py  test_litellm_response_format_example.py  test_litellm_with_directive_drafter.py  test_mcp_calendar_admin_tool_gating_example.py  test_ollama_structured_output_example.py  test_openwebui_pipe.py  test_openwebui_pipe_with_directive_drafter.py  test_prompt_construction_writing_assistant.py  test_refund_intake_example.py  test_retrieval_filtering_example.py
scripts/: validate_python.sh  validate_typescript.sh  validate_typescript_fast.sh
typescript/: README.md
typescript/examples/checkpoint_continuation/: README.md  package-lock.json  package.json
typescript/examples/execution_authorization/: README.md
typescript/examples/gateway_middleware/: README.md
typescript/examples/prompt_construction/: README.md
typescript/examples/retrieval_filtering/: README.md
typescript/examples/schema_selection/: README.md
typescript/examples/tool_gating/: README.md
typescript/starter_apps/nextjs/: README.md  package-lock.json  package.json
typescript/starter_apps/node/: README.md  package.json  server.ts
(+82 files in other folders)
