[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-compiler-example-integrations"
version = "0.1.0"
description = "Example integrations and enforcement-point demonstrations for Context Compiler."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Robert Lippmann" }]
dependencies = [
  "context-compiler>=0.7.4",
  "context-compiler-directive-drafter",
  "fastapi",
  "litellm",
]
keywords = [
  "context-compiler",
  "examples",
  "integrations",
  "llm",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/rlippmann/context-compiler-example-integrations"
Repository = "https://github.com/rlippmann/context-compiler-example-integrations"
Issues = "https://github.com/rlippmann/context-compiler-example-integrations/issues"

[dependency-groups]
dev = [
  "mypy",
  "pre-commit",
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
only-include = ["python", "README.md", "LICENSE", "AGENTS.md", "CONTRIBUTING.md"]


[tool.ruff]
extend-exclude = [
  ".next",
  "node_modules",
]

[tool.mypy]
files = [
  "python/examples",
  "python/reference_integrations",
]
exclude = '(^|/)(\\.venv|__pycache__|node_modules|\\.next)/'
disable_error_code = ["no-redef"]
explicit_package_bases = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
